policies/tests/restrict-volume-types/resource-fail.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: volumes-insecure-pod
  namespace: tenant-alpha
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: app
      image: "harbor.sre.internal/alpha/my-app:v1.0.0"
      securityContext:
        runAsNonRoot: true
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - "ALL"
      volumeMounts:
        - name: host-data
          mountPath: /data
  volumes:
    - name: host-data
      hostPath:
        path: /var/data
        type: Directory
