policies/tests/restrict-volume-types/resource-pass.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: volumes-secure-pod
  namespace: tenant-alpha
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: app
      image: "harbor.sre.internal/alpha/my-app:v1.0.0"
      securityContext:
        runAsNonRoot: true
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - "ALL"
      volumeMounts:
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: tmp
          mountPath: /tmp
  volumes:
    - name: config
      configMap:
        name: app-config
    - name: tmp
      emptyDir: {}
