policies/tests/restrict-volume-types/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-volume-types-test
policies:
  - policy.yaml
resources:
  - resource-pass.yaml
  - resource-fail.yaml
results:
  - policy: restrict-volume-types
    rule: restrict-volume-types
    resource: volumes-secure-pod
    kind: Pod
    result: pass
  - policy: restrict-volume-types
    rule: restrict-volume-types
    resource: volumes-insecure-pod
    kind: Pod
    result: fail
